[gd_scene load_steps=2 format=3 uid="uid://b2nko8fqx5iy8"]

[ext_resource type="Script" path="res://scripts/ui/Campfire.gd" id="1_campfire"]

[node name="Campfire" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_campfire")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.05, 1)

[node name="CampfirePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0

[node name="CampfireContainer" type="VBoxContainer" parent="CampfirePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="AmbianceLabel" type="Label" parent="CampfirePanel/CampfireContainer"]
layout_mode = 2
text = "üî• As chamas dan√ßam suavemente..."
autowrap_mode = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecommendationLabel" type="Label" parent="CampfirePanel/CampfireContainer"]
layout_mode = 2
text = "üí° Recomenda√ß√£o: ..."
autowrap_mode = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerStatusLabel" type="Label" parent="CampfirePanel/CampfireContainer"]
layout_mode = 2
text = "‚ù§Ô∏è HP: 100/100 | üÉè Deck: 10 cartas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="CampfirePanel/CampfireContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
text = "‚û°Ô∏è CONTINUAR"