# Sprint 15 - Sistema de Descanso/Fogueira
extends Control

@onready var ambiance_label = $CampfirePanel/CampfireContainer/AmbianceLabel
@onready var recommendation_label = $CampfirePanel/CampfireContainer/RecommendationLabel
@onready var player_status_label = $CampfirePanel/CampfireContainer/PlayerStatusLabel
@onready var options_container = $CampfirePanel/CampfireContainer/OptionsContainer
@onready var continue_btn = $ContinueButton

var campfire_options := []
var option_buttons := []
var action_taken := false

func _ready():
	print("üî• Campfire - Sprint 15: Sistema de descanso")

	# Conectar bot√£o continuar
	continue_btn.pressed.connect(_on_continue_pressed)
	continue_btn.visible = false

	# Gerar op√ß√µes da fogueira
	_generate_campfire_options()

	# Atualizar interface
	_update_ui()

func _generate_campfire_options():
	"""Gerar op√ß√µes da fogueira"""
	campfire_options = CampfireSystem.get_campfire_options()
	print("üî• Fogueira carregada com %d op√ß√µes" % campfire_options.size())

func _update_ui():
	"""Atualizar interface da fogueira"""
	if not CampfireSystem.can_use_campfire():
		print("‚ùå Fogueira s√≥ funciona durante runs")
		return

	# Texto de ambienta√ß√£o
	ambiance_label.text = CampfireSystem.get_campfire_ambiance_text()

	# Recomenda√ß√£o baseada no estado
	recommendation_label.text = CampfireSystem.get_rest_recommendation()

	# Status do jogador
	var progress = RunManager.get_run_progress()
	player_status_label.text = "‚ù§Ô∏è HP: %d/%d | üÉè Deck: %d cartas" % [progress.hp, progress.max_hp, progress.deck_size]

	# Limpar bot√µes existentes
	for btn in option_buttons:
		btn.queue_free()
	option_buttons.clear()

	# Criar bot√µes para cada op√ß√£o
	for i in range(campfire_options.size()):
		var option = campfire_options[i]
		var btn = Button.new()

		# Configurar bot√£o
		btn.text = "%s %s\n%s" % [option.icon, option.name, option.description]
		btn.custom_minimum_size = Vector2(300, 100)
		btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL

		# Verificar se a op√ß√£o est√° dispon√≠vel
		if option.has("requires_cards") and RunManager.get_run_deck().is_empty():
			btn.disabled = true
			btn.modulate = Color.GRAY
			btn.tooltip_text = "Sem cartas no deck"

		# Conectar sinal
		btn.pressed.connect(_on_option_pressed.bind(i))

		options_container.add_child(btn)
		option_buttons.append(btn)

	print("üî• Interface atualizada - %d op√ß√µes dispon√≠veis" % campfire_options.size())

func _on_option_pressed(option_index: int):
	"""Quando uma op√ß√£o √© pressionada"""
	if action_taken:
		return

	var option = campfire_options[option_index]
	action_taken = true

	print("üî• Op√ß√£o selecionada: %s" % option.name)

	# Executar a√ß√£o
	var result = CampfireSystem.execute_campfire_action(option.action)

	if result.success:
		if result.needs_card_selection:
			_handle_card_upgrade()
		else:
			_show_action_result(result.message)
	else:
		_show_action_result("‚ùå Falha ao executar a√ß√£o")

func _handle_card_upgrade():
	"""Lidar com melhoria de carta"""
	var candidates = CampfireSystem.get_upgrade_candidates()

	if candidates.is_empty():
		_show_action_result("‚ùå Nenhuma carta dispon√≠vel para melhoria")
		return

	# Criar popup de sele√ß√£o de carta
	var card_selection = _create_card_upgrade_popup(candidates)
	add_child(card_selection)

func _create_card_upgrade_popup(candidates: Array) -> Control:
	"""Criar popup para melhoria de carta"""
	var popup = Control.new()
	popup.set_anchors_and_offsets_preset(Control.PRESET_FULL_RECT)

	# Background escuro
	var bg = ColorRect.new()
	bg.set_anchors_and_offsets_preset(Control.PRESET_FULL_RECT)
	bg.color = Color(0, 0, 0, 0.7)
	popup.add_child(bg)

	# Panel principal
	var panel = Panel.new()
	panel.set_anchors_preset(Control.PRESET_CENTER)
	panel.size = Vector2(800, 600)
	panel.position = Vector2(-400, -300)
	popup.add_child(panel)

	# Container
	var container = VBoxContainer.new()
	container.set_anchors_and_offsets_preset(Control.PRESET_FULL_RECT, Control.PRESET_MODE_MINSIZE, 20)
	panel.add_child(container)

	# T√≠tulo
	var title = Label.new()
	title.text = "‚¨ÜÔ∏è Escolha uma carta para MELHORAR"
	title.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	container.add_child(title)

	# Scroll container para cartas
	var scroll = ScrollContainer.new()
	scroll.size_flags_vertical = Control.SIZE_EXPAND_FILL
	container.add_child(scroll)

	var cards_grid = GridContainer.new()
	cards_grid.columns = 3
	scroll.add_child(cards_grid)

	# Criar bot√µes para cada carta candidata
	for candidate in candidates:
		var card = candidate.card
		var card_btn = Button.new()
		card_btn.text = "üÉè %s\n‚ö° %d energia\n%s" % [card.name, card.cost, card.description]
		card_btn.custom_minimum_size = Vector2(200, 120)
		card_btn.pressed.connect(_on_card_upgrade_selected.bind(candidate.index, popup))
		cards_grid.add_child(card_btn)

	# Bot√£o cancelar
	var cancel_btn = Button.new()
	cancel_btn.text = "‚ùå Cancelar"
	cancel_btn.pressed.connect(_on_card_upgrade_canceled.bind(popup))
	container.add_child(cancel_btn)

	return popup

func _on_card_upgrade_selected(card_index: int, popup: Control):
	"""Quando uma carta √© selecionada para melhoria"""
	var result = CampfireSystem.upgrade_card(card_index)
	popup.queue_free()
	_show_action_result(result.message)

func _on_card_upgrade_canceled(popup: Control):
	"""Quando melhoria de carta √© cancelada"""
	popup.queue_free()
	action_taken = false
	_show_action_result("‚ùå Melhoria cancelada")

func _show_action_result(message: String):
	"""Mostrar resultado da a√ß√£o"""
	print("üì¢ %s" % message)

	# Desabilitar todas as op√ß√µes
	for btn in option_buttons:
		btn.disabled = true
		btn.modulate = Color.GRAY

	# Atualizar texto de ambienta√ß√£o com resultado
	ambiance_label.text = "üî• " + message

	# Mostrar bot√£o continuar
	continue_btn.visible = true

func _on_continue_pressed():
	"""Continuar ap√≥s a√ß√£o na fogueira"""
	print("‚û°Ô∏è Continuando ap√≥s fogueira...")

	# Completar node e voltar ao mapa
	RunManager.complete_current_node()
	GameData.save_game()

	await get_tree().create_timer(1.0).timeout
	get_tree().change_scene_to_file("res://scenes/ui/RunMap.tscn")